--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,11 @@
   <%= @user.last_name %>
 </p>
 
+<p>
+  <b>Telefon:</b>
+  <%= @user.phone %>
+</p>
+
 <% if can? :set_superadmin, @user %>
   <p>
     <b>Superadmin:</b>
