Bugfix: książkę można zamknąć wtedy, gdy wartość 1% jest nie mniejsza niż 0 (zamiast większa niż 0)

--- a/app/views/journals/index.html.erb
+++ b/app/views/journals/index.html.erb
@@ -17,9 +17,9 @@
     <td><%= journal.journal_type.name %></td>
     <td><%= link_to 'Pokaż wpisy', journal %></td>
     <% if journal.is_open %>
-      <td><%= link_to 'Zamknij', close_journal_url(journal), confirm: 'Na pewno?' %></td>
+      <td><%= link_to 'Zamknij', close_journal_url(journal), confirm: 'Czy na pewno zamknąć?' %></td>
     <% else %>
-      <td><%= link_to 'Otwórz', open_journal_url(journal), confirm: 'Na pewno?' %></td>
+      <td><%= link_to 'Otwórz', open_journal_url(journal), confirm: 'Czy na pewno otworzyć?' %></td>
     <% end %>
   </tr>
 <% end %>
