Nowe akcje na użytkowniku dostępne w szczegółach użytkownika: blokowanie/odblokowywanie, nadawanie/odbieranie roli superadmina.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
   <%= @user.first_name %>
 </p>
 
+<% if current_user.is_superadmin %>
 <p>
   <b>Nazwisko:</b>
   <%= @user.last_name %>
@@ -31,6 +32,7 @@
   <b>Zablokowany:</b>
   <%= @user.is_blocked ? "Tak" : "Nie" %>
 </p>
+<% end %>
 
 <p>
   <b>Przypisane grupy:</b><br/>
@@ -101,6 +103,24 @@
 <!--%= debug @user %-->
 <p>
   <% if can? :update, @user %><%= link_to 'Edytuj', edit_user_path(@user), :accesskey => 'e' %> |<% end %>
-  <% if can? :create, User %><%= link_to 'Nowy użytkownik', new_user_path, :accesskey => 'n' %> |<% end %>
+  <% if can? :update, @user %>
+		<% if @user.is_blocked %>
+			<%= link_to  'Odblokuj', unblock_user_path(@user), :confirm => 'Czy chcesz pozwolić użytkownikowi na zalogowanie się?', :title => 'Umożliwia użytkownikowi zalogowanie się' %> |
+		<% else %>
+			<%= link_to 'Zablokuj', block_user_path(@user), :confirm => 'Czy chcez zablokować możliwość zalogowania się?', :title => 'Pozbawia użytkownika możliwości zalogowania się' %> |
+		<% end %>
+	<% end %>
+	<% if current_user.is_superadmin %>
+		<% if @user.is_superadmin %>
+			<%= link_to 'Zdegraduj', demote_user_path(@user), :confirm => 'Pozbawić użytkownika roli superadmina?', :title => 'Pozbawia użytkownika roli superadmina' %> |
+		<% else %>
+			<%= link_to 'Awansuj', promote_user_path(@user), :confirm => 'Awansować użytkownika do roli superadmina?', :title => 'Awansuje użytkownika do roli superadmina' %> |
+		<% end %>
+	<% end %>
+	<% if can? :destroy, @user %><%= link_to 'Usuń', @user, confirm: 'Na pewno usunąć użytkownika?', method: :delete %><% end %>
+</p>
+
+<p>
   <%= link_to 'Lista', users_path, :accesskey => 'l' %>
+  <% if can? :create, User %>| <%= link_to 'Nowy użytkownik', new_user_path, :accesskey => 'n' %><% end %>
 </p>
