--- a/app/views/inventory_sources/edit.html.erb
+++ b/app/views/inventory_sources/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing inventory_source</h1>
+<h1>Edytuj źródło inwentarzowe</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @inventory_source %> |
-<%= link_to 'Back', inventory_sources_path %>
+<%= link_to 'Pokaż', @inventory_source %> |
+<%= link_to 'Powrót', inventory_sources_path %>
