--- a/app/views/inventory_sources/new.html.erb
+++ b/app/views/inventory_sources/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New inventory_source</h1>
+<h1>Nowe źródło inwentarzowe</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', inventory_sources_path %>
+<%= link_to 'Powrót', inventory_sources_path %>
