--- a/app/views/inventory_sources/show.html.erb
+++ b/app/views/inventory_sources/show.html.erb
@@ -1,15 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b>Nazwa:</b>
   <%= @inventory_source.name %>
 </p>
 
 <p>
-  <b>Is active:</b>
+  <b>Aktywne:</b>
   <%= @inventory_source.is_active %>
 </p>
 
 
-<%= link_to 'Edit', edit_inventory_source_path(@inventory_source) %> |
-<%= link_to 'Back', inventory_sources_path %>
+<%= link_to 'Edytuj', edit_inventory_source_path(@inventory_source) %> |
+<%= link_to 'Powrót', inventory_sources_path %>
