Źródło inwentarza nie jest stringiem tylko predefiniowanym polem

--- a/app/views/inventory_entries/_form.html.erb
+++ b/app/views/inventory_entries/_form.html.erb
@@ -35,7 +35,7 @@
       </div>
       <div class="field">
         <%= f.label :Źródło %>
-        <%= f.text_field :source %>
+        <%= f.text_field :inventory_source %>
       </div>
       <div class="field">
         <%= f.label :numer_inwentarzowy %>
