Wybieranie źródła wpisu inwentarzowego jako zwykły html-owy select

--- a/app/views/inventory_entries/_form.html.erb
+++ b/app/views/inventory_entries/_form.html.erb
@@ -35,7 +35,7 @@
       </div>
       <div class="field">
         <%= f.label :Źródło %>
-        <%= f.text_field :inventory_source %>
+        <%= collection_select(:inventory_entry, :inventory_source_id, InventorySource.all, :id, :name, prompt: true) %>
       </div>
       <div class="field">
         <%= f.label :numer_inwentarzowy %>
