--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -4,23 +4,38 @@ Saldo początkowe
 
 <table class="table table-condensed top-buffer-20">
   <tr>
-    <th>Nazwa</th>
-    <th>Saldo początkowe
-      <select onchange="selectedYearChanged(this.value)" class="span1">
+    <th rowspan="3">Nazwa</th>
+    <th colspan="4">Saldo początkowe
+      <select class="span1">
           <% @years.each do |year| %>
               <option value="<%= year %>" <%= year == session[:current_year] ? "selected='selected'" : "" %>><%= year %></option>
           <% end %>
       </select>
-      </th>
-    <th></th>
-    <th></th>
-    <th></th>
+    </th>
+    <th rowspan="3"></th>
+    <th rowspan="3"></th>
+    <th rowspan="3"></th>
+    <th rowspan="3"></th>
   </tr>
+    <tr>
+      <th colspan="2">finansowe</th>
+      <th colspan="2">bankowe</th>
+    </tr>
+    <tr>
+        <th>&nbsp;</th>
+        <th>1%</th>
+        <th>&nbsp;</th>
+        <th>1%</th>
+    </tr>
 
 <% @units.each do |unit| %>
   <tr>
     <td><%= unit.name %></td>
     <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
     <td><%= link_to 'Pokaż', unit %></td>
     <td><%= link_to 'Edytuj', edit_unit_path(unit) %></td>
     <td><%= link_to 'Usuń', unit, confirm: 'Na pewno usunąć drużynę?', method: :delete %></td>
