--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -6,82 +6,6 @@
 </p>
 
 <div class="row">
-  <div class="accordion span4" id="accordion">
-    <div class="accordion-group">
-      <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSubGroups">
-          Podgrupy
-        </a>
-      </div>
-      <div id="collapseSubGroups" class="accordion-body collapse in">
-        <div class="accordion-inner">
-          <% if @group.subgroups.each do |g| %>
-            <%= link_to g.name, g, :class=>"muted" %><br />
-          <% end.empty? %>
-            (Brak przypisanych podgrup)
-          <% end %>
-        </div>
-      </div>
-    </div>
-
-    <div class="accordion-group">
-      <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseAllSubGroups">
-          Wszystkie podgrupy
-        </a>
-      </div>
-      <div id="collapseAllSubGroups" class="accordion-body collapse">
-        <div class="accordion-inner">
-          <% if @group.find_all_subgroups().each do |g| %>
-            <%= link_to g.name, g, :class=>"muted" %><br/>
-          <% end.empty? %>
-            (Brak przypisanych podgrup)
-          <% end %>
-        </div>
-      </div>
-    </div>
-
-    <div class="accordion-group">
-      <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSuperGroups">
-          Wszystkie nadgrupy
-        </a>
-      </div>
-      <div id="collapseSuperGroups" class="accordion-body collapse">
-        <div class="accordion-inner">
-          <% if @group.find_all_supergroups().each do |g| %>
-            <%= link_to g.name, g, :class=>"muted" %><br />
-          <% end.empty? %>
-            (Brak przypisanych nadgrup)
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="accordion span4" id="accordion-units">
-    <div class="accordion-group">
-      <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-units" href="#collapseUnits">
-          Drużyny
-        </a>
-      </div>
-      <div id="collapseUnits" class="accordion-body collapse in">
-        <div class="accordion-inner">
-          <% if @group.units.each do |u| %>
-            <%= u.name %><br />
-          <% end.empty? %>
-            (Brak przypisanych drużyn)
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
   <div class="accordion span12" id="accordion-users">
     <div class="accordion-group">
       <div class="accordion-heading">
@@ -127,6 +51,86 @@
           <% end %>
           </table>
           <% if can? :create, UserGroupAssociation %><%= link_to 'Przypisz użytkownika', new_user_group_association_path(:group_id => @group.id, :from => "group") %><% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="accordion span4" id="accordion-units">
+    <div class="accordion-group">
+      <div class="accordion-heading">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-units" href="#collapseUnits">
+          Drużyny
+        </a>
+      </div>
+      <div id="collapseUnits" class="accordion-body collapse in">
+        <div class="accordion-inner muted">
+          <% if @group.units.each do |u| %>
+            <%= link_to u.name, u, :class => "muted" %><br />
+          <% end.empty? %>
+            (Brak przypisanych drużyn)
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="accordion span4" id="accordion-subgroups">
+    <div class="accordion-group">
+      <div class="accordion-heading">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-subgroups" href="#collapseSubGroups">
+          Zawiera
+        </a>
+      </div>
+      <div id="collapseSubGroups" class="accordion-body collapse in">
+        <div class="accordion-inner muted">
+          <% if @group.subgroups.each do |g| %>
+            <%= link_to g.name, g, :class => "muted"  %><br />
+          <% end.empty? %>
+            (Brak podgrup)
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion span4" id="accordion-allsubgroups">
+    <div class="accordion-group">
+      <div class="accordion-heading">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-allsubgroups" href="#collapseAllSubGroups">
+          Zawiera (wszystkie)
+        </a>
+      </div>
+      <div id="collapseAllSubGroups" class="accordion-body collapse">
+        <div class="accordion-inner muted">
+          <% if @group.find_all_subgroups().each do |g| %>
+            <%= link_to g.name, g, :class => "muted" %><br/>
+          <% end.empty? %>
+            (Brak podgrup)
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion span4" id="accordion-supergroups">
+    <div class="accordion-group">
+      <div class="accordion-heading">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-supergroups" href="#collapseSuperGroups">
+          Należy do
+        </a>
+      </div>
+      <div id="collapseSuperGroups" class="accordion-body collapse in">
+        <div class="accordion-inner muted">
+          <% if @group.find_all_supergroups().each do |g| %>
+            <%= link_to g.name, g, :class => "muted" %><br />
+          <% end.empty? %>
+            (Brak nadgrup)
+          <% end %>
         </div>
       </div>
     </div>
