Drobne poprawki w widoku edycji grupy

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -12,28 +12,32 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
+  <br/>
 
 <% if @group.new_record? %>
   <div class="field">
     Grupa nadrzędna<br />
     <%= select_tag(:supergroup_id, options_for_select(@supergroups.collect { |g| [ g.name, g.id ] }, @supergroup.id)) %>
   </div>
+  <br/>
 <% end %>
   
   <div class="field">
     <%= f.label :subgroup_ids %>
     <%= f.select :subgroup_ids, @subgroups.collect { |g| [ g.name, g.id ] }, { :include_blank => "(Brak przypisanych podgrup)" }, :multiple => true %>
   </div>
+  <br/>
 
   <div class="field">
     <%= f.label :unit_ids %>
     <%= f.select :unit_ids, @units.collect { |u| [ u.name, u.id ] }, { :include_blank => "(Brak przypisanych drużyn)" }, :multiple => true %>
   </div>
+  <br/>
   
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Aktualizuj grupę" %>
   </div>
 <% end %>
