--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -156,7 +156,7 @@
 
 <div class="row">
   <div class="span10">
-    <%= link_to 'Powrót do listy', groups_path %>
+    <%= link_to 'Powrót do listy', groups_path, class: 'btn btn-small btn-primary' %>
   </div>
   <div class="span2">
     <div class="pull-right">
