--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -30,14 +30,12 @@
     <tr>
       <th colspan="3" title="<%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%>"></th>
       <th colspan="<%= @categories_income.count %>" class="balance-label"><span class="pull-right muted"><small>Saldo początkowe (w tym 1%):</small></span></th>
-      <th colspan="2" class="balance" id="initial-balance">
+      <th colspan="<%= @categories_expense.count + 2 %>" class="balance" id="initial-balance">
         <small>
           <%= number_with_precision(@journal.initial_balance, :precision => 2) %> zł
           (<%= number_with_precision(@journal.initial_balance_one_percent, :precision => 2) %> zł)
         </small>
       </th>
-
-      <th colspan="<%= @categories_expense.count %>"></th>
     </tr>
 
     <tr class="border-top-bold">
@@ -161,13 +159,12 @@
     <tr>
       <th colspan="3"></th>
       <th colspan="<%= @categories_income.count %>" class="balance-label"><span class="pull-right muted"><small>Saldo końcowe (w tym 1%):</small></span></th>
-      <th colspan="2" class="balance" id="initial-balance">
+      <th colspan="<%= @categories_expense.count + 2 %>" class="balance" id="initial-balance">
         <small>
           <%= number_with_precision(@journal.get_final_balance, :precision => 2) %> zł
           (<%= number_with_precision(@journal.get_final_balance_one_percent, :precision => 2) %> zł)
         </small>
       </th>
-      <th colspan="<%= @categories_expense.count %>"></th>
     </tr>
   </tfoot>
 </table>
