--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,7 +13,7 @@
 
 <div class="row top-buffer-40">
   <div class="span12">
-    <%= link_to 'Utwórz nową grupę', new_group_path, class: "btn btn-small btn primary" %>
+    <%= link_to 'Utwórz nową grupę', new_group_path, class: "btn btn-small btn-primary" %>
   </div>
 </div>
 
