--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,7 +4,7 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
  *= require_tree . 
- *= require jquery.ui.datepicker
+ *= require jquery-ui/datepicker
 */
 
 #navbar {
